add normalize + css fixes

--- a/learning/just_css/css_help.html
+++ b/learning/just_css/css_help.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="learning.css">
+    <link rel="stylesheet" href="normalize.css">
     <title>CSS Learning</title>
     <style>
         /* Встроенные стили (второй по приоритету способ подключения) */
@@ -195,6 +196,15 @@
 
     Важно:
     - При столкновении двух margin у разных элементов браузер выберет наибольший и применит его, например при столкновении двух элементов с отступами 50 и 100 друг от друга, расстояние между ними будет 100.
+
+    -->
+
+    <!--
+    ===========================================
+    Урок 5: Обнуляющие стили CSS
+    ===========================================
+
+    Normalize CSS/ Reset CSS использовать для стандартизации стилей под все браузеры.
 
     -->
 
