some new css lessons

--- a/learning/just_css/css_help.html
+++ b/learning/just_css/css_help.html
@@ -333,9 +333,45 @@
     Урок 9: Рамки, обводки, тени, фильтры в CSS
     ===========================================
 
-    
+    Свойство:
+    -outline:
+    Задает обводку нужному элементу, при этом не добавляет элементу в размерах, в отличие от border
+    Работает по тому же принципу, что и border.
+
+    -border-radius:
+    Дает возможность сделать края элемента круглыми.
+
+    -box-shadow:
+    Задает тени для выбранных объектов. Изменяюются только четыре значения: первое - по горизонатли, второе - по вертикали, третье - радиус раззмытия, четвертое - радиус распространения(размеры). А также после данных значений можно указать цвет в любом его формате. Дополнительно можно использовать свойство inset после этого, оно меняет расположение теней с внешнего на внутреннее
+
+    -filter:
+    Добавляет возможность менять фильтры для картинок внутри сайта.
+    Можно указать drop-shadow(анвлог box-shadow), что позволит добавить тени для объекта формата .png
 
     -->
+    <section class="example">
+        <header class="list-head">Границы</header>
+        <div class="box"></div>
+        <div class="box broken-outline"></div>
+    </section>
+
+    <section class="example">
+        <header class="list-head">Ссылка на генератор закруглений</header>
+        <a href="https://9elements.github.io/fancy-border-radius/" target="_blank" style="text-decoration: none; background-image: linear-gradient(67grad, blue,green,lightgreen); color: #fff">Кликни сюда!</a>
+    </section>
+
+        <section class="example">
+        <header class="list-head">Тени</header>
+        <div class="shadow box"></div>
+    </section>
+
+    <!--
+    ===========================================
+    Урок 10: Позиционирование в CSS
+    ===========================================
+    -->
+
+
 
 </body>
 </html>
