css positions lesson

--- a/learning/just_css/css_help.html
+++ b/learning/just_css/css_help.html
@@ -369,9 +369,84 @@
     ===========================================
     Урок 10: Позиционирование в CSS
     ===========================================
+
+    Свойство:
+    -position:
+    Позволяет определить позицию нужного элемента относительно его окружения на сайте.
+    --static:
+    Значение по умолчанию, элемент будет расположен в порядке очереди
+    Не могут быть применены top,right,left,botttom,inset,z-index
+
+    --relative:
+    Тот же static, только теперь на объект будут работать смещения типа left,right и т.п
+
+    --absolute:
+    Выбивает элемент из очереди, соседние объекты типа relative и др, без указания смещения у absolute-элемента, будут принимать этот элемент поверх себя, накладываться друг на друга.
+    Используют вместе со смещениями типа top,right и др.
+    Смещения применяются относительно ближайшего не static элемента в <body>. Если такого элемента нет, то смещения работают относительно самого <body>
+    Даже если элемент типа display: block; , он все равно будет занимать ровно столько места, сколько ему нужно.
+    Часто комбинируют с relative-объектами
+
+    --fixed:
+    Использует в случае, когда нужно закрепить элемент относительно границ страницы, чтобы пользователь при прокрутке видел элемент постоянно.
+    Это значение всегда работает от границ страницы, в отличие от absolute
+
+    --sticky:
+    Позволяет зафиксировать элемент, чтобы при видимости его родительских элементов при прокрутке также был виден и sticky-элемент
+
+    -inset(top,right,left.bottom)
+    Вышеперечисленный в скобках список параметров позволяет переместить любой (*не static) позиционированный элемент в нужном направлении, а inset объединяет их в одно свойство и принимает до 4 аргументов по давно изученной методика, например как у padding
+
+    -z-index:
+    Позволяет менять порядок наложения элементов одного позиционирования по мере увеличение индекса вверх по числовой системе
+    Важно:
+    Индекс родительского элемента всегда будет <= индексу дочернего элемента
+
     -->
 
+    <section class="example new-style">
+        <header class="list-head">Позиционирование</header>
+        <div class="positions-box">
+            <div class="box one">
+                position: static;
+            </div>
+            <div class="box two">
+                position: relative;
+                top: 50px;
+                left: 100px;
+            </div>
+            <div class="box three">
+                position: absolute;
+                z-index: 100;
+                top: 100px;
+                left: 250px;
+            </div>
+            <div class="box four">
+                position: fixed;
+                top: 580px;
+                left: 330px;
+            </div>
+            <div class="box five">
+                position: sticky;
+                top: 0;
+                left: 20px;
+            </div>
+        </div>
+    </section>
 
+
+    <section class="example new-style"
+    style="
+    border-style: none;">
+        <div class="some-box"
+        style="
+            position: fixed;
+            width: 400px;
+            height: 200px;
+            bottom: 0;
+            right: 0;
+            background-color: #000;"><p style="color: #fff;">Тут должно было быть видео,а вообще это фиксированный элемент через position: fixed;</p></div>
+    </section>
 
 </body>
 </html>
