some new css lessons

--- a/learning/just_css/css_help.html
+++ b/learning/just_css/css_help.html
@@ -448,5 +448,32 @@
             background-color: #000;"><p style="color: #fff;">Тут должно было быть видео,а вообще это фиксированный элемент через position: fixed;</p></div>
     </section>
 
+    <!--
+    ===========================================
+    Урок 11: Единицы измерения в CSS
+    ===========================================
+
+    Единицы измерения в CSS делят на относительные и абсолютные. Так, например, vw высчитывается исходя из области экрана, на котором в данныый момент просматривается контент с vw, также em считается исходя из размера шрифта.Mm и px в свою очередь величины абсолюьные и не зависят от каких-либо факторов из их окружения.
+
+    -->
+
+    <section class="example new-style">
+        <header class="list-head">Единицы измерения</header>
+        <div class="elem-box">
+            <div class="elem-1">
+                Ширина 50vw
+            </div>
+            <div class="elem-2">
+                Ширина 15em при размере шрифта 30px
+            </div>
+            <div class="elem-3">
+                Ширина 200px
+            </div>
+            <div class="elem-4">
+                Ширина 30mm
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
